# atmi

./: .gitignore  INSTALL.md  LICENSE.TXT  LICENSE.txt  README.md  cloc  cloc.sh
examples/: README.md
examples/async_vecsum/: buildrun.sh
examples/atmi/async_vecsum/: buildrun.sh  sumKernel.cl  vecsum.cpp
examples/atmi/dag_race/: buildrun.sh  cleanup.sh  dag_race.c  players.cl
examples/atmi/depends/: buildrun.sh  cleanup.sh  csquares.cl  csquares.cpp  csquares_kernels.cl
examples/atmi/dynamic_parallism/: Reduction.cpp  buildrun.sh  hw.cl  hw_brig.h
examples/atmi/fibonacci/: README  buildrun.sh  fibonacci.bfs.cpp  fibonacci.cl  fibonacci.cpp  fibonacci.dfs.cpp  fibonacci.naive.cpp
examples/atmi/helloworld/: HelloWorld.cpp  buildrun.sh  cleanup.sh  createwrapper.sh  hello.cpp  helloKernel.cl  hw.cl  kl_genw.sh
examples/atmi/helloworld_dp/: HelloWorld.cpp  Makefile  buildrun.sh  hw.cl
examples/atmi/kps/: buildrun.sh  kps.cpp  nullKernel.cl
examples/atmi/multi_kernel_helloworld/: Makefile  hello.c
examples/atmi/potrf/: Makefile  atmi_lapack.h  atmi_spotrf_L.c  common.c  common.h  common_timing.h  flops.h  gpuKernels.cl  testing_spotrf.c  trace_gen.py
examples/atmi/printinfo/: buildrun.sh  printinfo.cpp
examples/atmi/reduction_dp/: Makefile  buildrun.sh  cleanup.sh  hw.cl
examples/c_extension/depends/: buildrun.sh  cleanup.sh  csquares.cpp  csquares_kernels.cl
examples/c_extension/eps/: Makefile  buildrun.sh  cleanup.sh  eps.cpp  nullKernel.cl
examples/c_extension/fibonacci/: buildrun.sh  cleanup.sh  fibonacci.cpp
examples/c_extension/helloworld/: HelloWorld.cpp  Makefile  hw.cl
examples/c_extension/helloworld_dGPU/: HelloWorld.cpp  Makefile  buildrun.sh  hw.cl
examples/c_extension/kps/: buildrun.sh  cleanup.sh  kps.cpp  nullKernel.cl
examples/c_extension_denq/helloworld/: HelloWorld.cpp  Makefile  hw.cl
examples/c_extension_denq/kps/: cleanup.sh  kps.cpp  nullKernel.cl
examples/c_extension_denq/reduction/: Makefile  Reduction.cpp  buildrun.sh  cleanup.sh  reduction.cl
examples/dag_race/: buildrun.sh  dag_race.c
examples/depends/: csquares.cpp  csquares_kernels.cl
examples/dlbench_multi_agent/: build.atmi.sh  build.hsa.sh  build.sh  dlbench.c  grayscale.cl
examples/eps/: buildrun.sh  eps.cpp  nullKernel.cl
examples/fibonacci/: buildrun.sh  fibonacci.cpp
examples/fibonacci_continuations/: buildrun.sh  fibonacci.cpp
examples/helloworld/: HelloWorld.cpp  Makefile  buildrun.sh
examples/helloworld_dGPU/: cleanup.sh  hw.cl
examples/helloworld_dGPU_rt/: Makefile  hw.cpp
examples/helloworld_dp/: HelloWorld.cpp  Makefile  hw.cl
examples/helloworld_rt/: Makefile  hw.cl  hw.cpp  hw_structs.h
examples/hsa/: Makefile
examples/hsa/common/: Makefile  elf_utils.c  elf_utils.cpp
examples/hsa/vector_copy/: Makefile  README  cloc  run.sh  vector_copy.c  vector_copy.cl  vector_copy.cpp
examples/hsa/vector_copy_async/: Makefile  vector_copy.c  vector_copy.cl
examples/interop/globalsymbol/: Makefile  globalsymbol.cl  globalsymbol.cpp
examples/interop/hsainfo/: Makefile  hsainfo.cpp
examples/kernel_enqueue/helloworld/: Makefile
examples/kernel_enqueue/helloworld-atmi/: Makefile  hw.cl  hw.cpp
examples/kernel_enqueue/kps/: buildrun.sh
examples/kernel_enqueue/reduction/: Makefile  Reduction.cpp  buildrun.sh  cleanup.sh
examples/kps/: buildrun.sh  kps.cpp  nullKernel.cl
examples/kps_dp/: cleanup.sh  kps.cpp  nullKernel.cl
examples/okra/: .hsail0.95-1.0Mapping.swp  Makefile  README.md  build.sh  build.xml  buildAndCopyBrig.sh  buildone.sh  buildonebrig.sh  c.out  env.sh  hsail0.95-1.0Mapping  run.sh  runone.sh  tmp_hsail_dump  utils.h
examples/okra/BVH/: BVH  BVH.cl  BVH.cpp  BVH.h  BVH.hsail  HsaApp.h  (+8 more)
examples/printinfo/: buildrun.sh  printinfo.cpp
examples/reduction_dp/: Makefile  Reduction.cpp  reduction.cl
examples/snack/: README
examples/vecsum_dGPU/: Makefile  sumKernel.cl  vecsum.cpp
include/: atl_rt.h  atmi.h  atmi_c_ext.h  atmi_interop_hsa.h  atmi_kl.h  atmi_rt.h  atmi_runtime.h  bindthread.h  debug_output.h  hsa_cl.h  profiling.h  snk.h  snk_cpu_task.h  snk_internal.h
src/: CMakeLists.txt  Makefile  atl_bindthread.c  atl_cputask.c  atl_pifgen_plugin.c  atl_profile.c  atl_rt.c  atl_synckernel.c  atmi-backward-compat.cmake  atmi_bindthread.c  bindthread.c  debug_output.c  profiling.c  snk.c  snk_cpu_task.c  snk_genw.c  snk_genw.h  snk_sync_kernel.c
src/cmake_modules/: FindLibElf.cmake  FindROCm.cmake  utils.cmake
src/compiler/: CMakeLists.txt  Makefile  atl_pifgen_plugin.c  atl_synckernel.c
src/compiler/include/: atl_pifgen.h  hsa_cl.h
src/device_runtime/: CMakeLists.txt  OCL.cmake  bc.cmake  device_rt.cl  device_rt.cpp  device_rt.h
src/device_runtime/include/: device_amd_hsa.h
src/include/: RealTimerClass.h  atl_bindthread.h  atl_internal.h  atl_profile.h
src/interop/: CMakeLists.txt
src/interop/hsa/: CMakeLists.txt  atmi_interop_hsa.cpp
src/packaging/: cpack_project_config.txt
src/plugin/: Makefile  cpu_pifgen_gcc_plugin.c  hello.c  hello.h  hello2.c  multi_target_gcc_plugin.c  pifgen_gcc_plugin.c
src/runtime/: ATLData.cpp  ATLMachine.cpp  ATLQueue.cpp  CMakeLists.txt  Makefile  atl_bindthread.c  atl_cputask.c  atl_profile.c  atl_rt.c  atl_synckernel.c
src/runtime/core/: ATLData.cpp  ATLMachine.cpp  ATLQueue.cpp  CMakeLists.txt  atl_bindthread.c  atl_cputask.c  atl_hostcall.c  atl_profile.c  atl_rt.c  atl_synckernel.c  atmi.cpp  cputask.cpp  data.cpp  kernel.cpp  machine.cpp  platform.cpp  queue.cpp  system.cpp  task.cpp  taskgroup.cpp  utils.cpp
src/runtime/include/: ATLData.h  ATLMachine.h  ATLMachine.tcc  ATLQueue.h  RealTimerClass.h  atl_bindthread.h  atl_internal.h  atl_profile.h  atl_rt.h  data.h  device_rt_internal.h  internal.h  kernel.h  machine.h  queue.h  rt.h  task.h  taskgroup.h
src/runtime/interop/: CMakeLists.txt
src/runtime/interop/hsa/: CMakeLists.txt  atmi_interop_hsa.cpp
src/utils/: CMakeLists.txt
src/utils/prepare-builtins/: prepare-builtins.cpp
ubuntu/: cloc_0.7.4_amd64.deb
utils/atmi_hof/: Makefile  atmi_hof.cpp
utils/hof/: Makefile  hof.cpp
(+146 files in other folders)
